# zotero-arxiv-daily

./: README.md  construct_email.py  docker-compose.yml  fav_utils.py  llm.py  main.py  paper.py  pyproject.toml  recommender.py  simple_key_pool.py
.github/workflows/: main.yml  main_genetics.yml  test-config.yml  test.yml
docs/: argumentadded  todo.md
